<resources>
    <string name="app_name">CookingApp</string>
    <string name="title_discover">Khám phá</string>
    <string name="title_profile">Cá nhân</string>
    <string name="profile_add_food">Add food</string>
    <string name="profile_avatar">Profile Avatar</string>
    <string name="profile_my_food">Món ăn của tôi</string>
    <string name="profile_rated_food">Món ăn đã đánh giá</string>
    <string name="DoKho">Độ khó</string>
    <string name="QuocGia">Quốc gia</string>
    <string name="DoAnChay">Đồ ăn chay</string>
    <string name="Loc">Lọc</string>
    <string name="btn_login">Đăng nhập</string>
    <string name="txt_username">Tên đăng nhập</string>
    <string name="txt_password">Mật khẩu</string>
    <string name="txt_sign_up">Chưa có tài khoản? Đăng ký ngay</string>
    <string name="txt_login">Bạn đã có tài khoản? Trở lại màn hình đăng nhập</string>
    <string name="btn_sign_up">Đăng ký</string>
    <string name="txt_password_confirm">Xác nhận mật khẩu</string>
    <string name="txt_full_name">Họ và tên</string>
    <string name="title_activity_add_food">Thêm món ăn</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s
    </string>
    <string name="txt_food_name">Tên món</string>
    <string name="txt_food_description">Mô tả</string>
    <string name="txt_is_vegetarian">Là đồ ăn chay</string>
    <string name="txt_food_difficult_level">Độ khó</string>
    <string name="txt_food_time_to_cook">Thời gian nấu (phút)</string>
    <string name="txt_food_ingredient">Thành phần</string>
    <string name="txt_food_tips">Mẹo</string>
    <string name="btn_food_upload_image">Tải lên ảnh món ăn</string>
    <string name="spn_food_country">Quốc gia</string>
    <string name="rtb_food_difficult_level">Độ khó</string>
    <string name="txt_food_steps">Các bước thực hiện</string>
    <string name="btn_add_step">Thêm bước</string>
    <string name="txt_step_name">Tên bước</string>
    <string name="txt_step_description">Mô tả</string>
    <string name="btn_step_add_image">Thêm ảnh</string>
    <string name="img_food">Ảnh món ăn</string>
    <string name="txt_step">Bước %1$d</string>
    <string name="btn_finish_add">Tạo món ăn</string>
    <string name="img_food_details">Food image</string>
    <string name="img_food_step">Step image</string>
    <string name="txt_details_is_vegetarian">Đồ ăn chay</string>
    <string name="txt_details_time_to_cook">Thời gian: %1$d phút</string>
    <string name="txt_details_country">Quốc gia: %1$s</string>
    <string name="txt_details_votes">%1$d lượt đánh giá</string>
    <string name="txt_details_ingredients">Nguyên liệu: %1$s</string>
    <string name="txt_details_step">Bước %1$d: %2$s</string>
    <string name="txt_details_rate_food">Đánh giá món ăn</string>
    <string name="btn_details_rate_food">Gửi đánh giá</string>
    <string name="txt_details_my_rate">Đánh giá của tôi</string>
    <string name="txt_rate_comment">Hãy chia sẽ những điều bạn thích về món ăn</string>
    <string name="confirm">Xác nhận</string>
    <string name="title_activity_my_food">Món ăn của tôi</string>
    <string name="title_activity_rated_food">Món ăn đã đánh giá</string>
    <string name="textview">TextView</string>
    <string name="nh_gi">Đánh giá</string>
    <string name="btn_log_out">Đăng xuất</string>
</resources>
