<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.discover.DiscoverFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutTimKiem"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:visibility="invisible">

        <TextView
            android:id="@+id/txtDoAnChay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/DoAnChay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/ckbDoAnChay"
            android:layout_width="39dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/txtDoAnChay"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/txtQuocGia"
            android:layout_width="73dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="13dp"
            android:text="@string/QuocGia"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDoAnChay" />

        <Spinner
            android:id="@+id/cboNuoc"
            android:layout_width="176dp"
            android:layout_height="40dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@+id/txtQuocGia"
            app:layout_constraintTop_toBottomOf="@+id/ckbDoAnChay" />

        <Button
            android:id="@+id/btnLoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Loc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cboNuoc" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <GridView
        android:id="@+id/grvFood"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:horizontalSpacing="2dp"
        android:numColumns="2"
        android:verticalSpacing="2dp" />

</androidx.appcompat.widget.LinearLayoutCompat>
